@@ -1,0 +1,15 @@
+# sieve and LMTP
+if $syslogfacility-text == 'local5' and ($msg contains "lmtp(" or $msg contains "lda(") then -PH_DOVECOT_SYSLOG_FILE_LDA
+& stop
+
+# IMAP
+if $syslogfacility-text == 'local5' and ($msg contains "imap(" or $msg contains "imap-login:") then -PH_DOVECOT_SYSLOG_FILE_IMAP
+& stop
+
+# POP3
+if $syslogfacility-text == 'local5' and ($msg contains "pop(" or $msg contains "pop-login:") then -PH-DOVECOT_SYSLOG_FILE_POP3
+& stop
+
+# All other Dovecot log
+local5.*    -PH_DOVECOT_LOG_FILE
+& stop
